@@ -11,8 +11,9 @@ DSK_1_40D	= blackcauldron_d1_40d.dsk
 DSK_2_40D	= blackcauldron_d2_40d.dsk
 DSK_80D		= blackcauldron_80d.dsk
 DSK_DW3		= blackcauldron_dw3.dsk
+DSK_DW3_BECKER	= blackcauldron_dw3_becker.dsk
 
-DSKS		= $(DSK_1_40D) $(DSK_2_40D) $(DSK_80D) $(DSK_DW3)
+DSKS		= $(DSK_1_40D) $(DSK_2_40D) $(DSK_80D) $(DSK_DW3) $(DSK_DW3_BECKER)
 
 DSK_1_40D_NAME = "The Black Cauldron Disk 1"
 DSK_2_40D_NAME = "The Black Cauldron Disk 2"
@@ -25,6 +26,7 @@ MD		= $(LEVEL2)/coco3/modules
 # We make our own bootfile and KERNEL_FLOPPY track
 KERNEL_FLOPPY	= $(MD)/rel_32 $(MD)/boot_1773_6ms $(MD)/krn
 KERNEL_DW3	= $(MD)/rel_32 $(MD)/boot_dw3 $(MD)/krn
+KERNEL_DW3_BECKER	= $(MD)/rel_32 $(MD)/boot_dw3_becker $(MD)/krn
 BOOTFILE_40D	= $(MD)/krnp2 $(MD)/ioman $(MD)/init \
 		$(MD)/rbf.mn \
 		$(MD)/rb1773.dr $(MD)/ddd0_40d.dd \
@@ -51,6 +53,16 @@ BOOTFILE_DW3	= $(MD)/krnp2 $(MD)/ioman $(MD)/init \
 		$(MD)/covdg_small.io $(MD)/term_vdg.dt \
 		$(MD)/vrn.dr $(MD)/vi.dd \
 		$(MD)/clock_60hz $(MD)/clock2_dw3 $(MD)/sysgo_dd
+
+BOOTFILE_DW3_BECKER	= $(MD)/krnp2 $(MD)/ioman $(MD)/init \
+		$(MD)/rbf.mn \
+		$(MD)/rbdw3.dr $(MD)/dw3_becker.sb $(MD)/ddx0.dd \
+		$(MD)/scf.mn $(MD)/vtio.dr \
+		$(MD)/keydrv_cc3.sb $(MD)/joydrv_joy.sb $(MD)/snddrv_cc3.sb \
+		$(MD)/covdg_small.io $(MD)/term_vdg.dt \
+		$(MD)/vrn.dr $(MD)/vi.dd \
+		$(MD)/clock_60hz $(MD)/clock2_dw3 $(MD)/sysgo_dd
+
 
 BOOTCMDS	= $(LEVEL2)/coco3/cmds/shell_21 $(LEVEL2)/coco3/cmds/date \
 		$(LEVEL2)/coco3/cmds/echo $(LEVEL2)/coco3/cmds/link \
@@ -143,7 +155,30 @@ dsk_dw3:	all
 	$(RM) tocgen
 	tocgen $(DSK_DW3),tOC.txt $(DSK_DW3),tOC
 
-dsk:	dsk_40d dsk_80d dsk_dw3
+dsk_dw3_becker:	all
+	$(RM) $(DSK_DW3_BECKER)
+	$(CD) $(LEVEL2)/coco3; make
+	$(OS9FORMAT_DW3) -q $(DSK_DW3_BECKER) -n$(DSK_DW3_NAME)
+	$(MERGE) $(BOOTFILE_DW3_BECKER)>os9boot
+	$(MERGE) $(KERNEL_DW3_BECKER)>kernel
+	$(OS9GEN) $(DSK_DW3_BECKER) -b=os9boot -t=kernel
+	$(RM) os9boot kernel
+	$(MAKDIR) $(DSK_DW3_BECKER),CMDS
+	$(CP) $(CMDS) $(DSK_DW3_BECKER),CMDS
+	$(foreach file, $(CMDS), $(OS9ATTR_EXEC) $(DSK_DW3_BECKER),CMDS/$(file);)
+	$(MERGE) $(BOOTCMDS)>shell
+	$(CP) shell $(DSK_DW3_BECKER),CMDS
+	$(RM) shell
+	$(OS9ATTR) $(DSK_DW3_BECKER),CMDS/shell -e -pe -pr -e -w -r
+	$(OS9RENAME) $(DSK_DW3_BECKER),CMDS/sierra AutoEx
+	$(CPL) $(TEXTFILES) $(DSK_DW3_BECKER),.
+	$(OS9RENAME) $(DSK_DW3_BECKER),tOC_40d.txt tOC.txt
+	$(CP) $(SUPPORTFILES) $(DSK_DW3_BECKER),.
+	$(RM) tocgen
+	tocgen $(DSK_DW3_BECKER),tOC.txt $(DSK_DW3_BECKER),tOC
+
+
+dsk:	dsk_40d dsk_80d dsk_dw3 dsk_dw3_becker
 
 dskcopy: dsk
 	$(CP) $(DSKS) $(DSKDIR)
